MSL-121:create album page
